【YiWu-Server】add swagger document
